--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,33 @@
 body{
     background-color: rgb(187, 184, 184);
+}
+header{
+    text-align:center;
+}
+
+.ingresarHoras{
+/*     border-style: solid;
+    border-width: 10px;
+    border-color: black; */
     text-align: center;
 }
+
+.ResultadosTable{
+    padding-top: 50px;
+    width: 100%;
+/*     border-style: solid;
+    border-width: 10px;
+    border-color:red; */
+    text-align: center;
+}
+
+.button1 {
+    background-color: red; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
